<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Health</string>
    <string name="nurse_image">Nurse Image</string>
    <string name="text_sign_up_description">Sign up to the best health emergency app to track your
        health, get health tips and get the services of medical professionals.</string>
    <string name="eclipse_image">Eclipse Image</string>
    <string name="next">Next</string>
    <string name="text_splash_info">Track your health, get connected to the best specialist
        within the shortest distance from you.</string>
    <string name="text_splash_header">The best in managing your health!</string>
    <string name="left_moving_doctor">Moving doctor</string>
    <string name="text_header_description">Sign up to the best health emergency app to track your
        health, get health tips and get the services of medical professionals.</string>
    <string name="right_doctor_image">Right Doctor Image</string>
    <string name="how_to_use">How to use</string>
    <string name="how_to_use_description">Sign Up as a user or specialist. Login and the
        app is ready to be used</string>
    <string name="features">Features</string>
    <string name="features_details">Monitor your health,Report as emergency, Access to medical
        professional and Receive health tips</string>
    <string name="user">User</string>
    <string name="specialist">Specialist</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="profession">Profession</string>
    <string name="id_number">Id Number</string>
    <string name="work_institute">Work Institute</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="nin_optional">NIN (Optional)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_a_user">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="drink_water_instruction">Drink enough water today to regulate the body temperature</string>
    <string name="hi_olutoba">Hi! Olutoba</string>
    <string name="what_do_you_need">What Do You Need?</string>
    <string name="ambulance">Ambulance</string>
    <string name="ambulance_image">Ambulance Image</string>
    <string name="telephone_image">Telephone Image</string>
    <string name="call_for_help">Call for help</string>
    <string name="consultation">Consultation</string>
    <string name="medicine">Medicine</string>
    <string name="cartoon_doctor_image">Cartoon Doctor Image</string>
    <string name="top_doctors">Top Doctors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>