<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/splash_appName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/linear_layout"
            android:layout_alignParentEnd="true"
            android:background="#33cc99"
            android:text="@string/app_name"
            android:textSize="33sp" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/doctor_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_doctor"
                android:src="@drawable/left_pacing_nurse" />

            <ImageView
                android:id="@+id/eclipse_image"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/eclipse_image"
                android:src="@drawable/ellipse_one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_splash_header"
                android:textColor="#33cc99"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/splashInfo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_splash_info"
                android:textColor="#33CC99" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/text_border"
            android:text="@string/next" />

    </RelativeLayout>
</layout>
