<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SpecialistLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/elipse_quadrant_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="-35dp"
                android:contentDescription="@string/eclipse_image"
                android:src="@drawable/ellipse_quadrant" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/running_doctor_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/left_moving_doctor"
                    android:src="@drawable/left_pacing_nurse" />

                <TextView
                    android:id="@+id/E_Health_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/rock"
                    android:text="@string/app_name"
                    android:textColor="@color/general_green"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/header_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="205dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/text_header_description"
                android:textAlignment="center"
                android:textColor="@color/general_green"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/eclipse_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="225dp"
                android:contentDescription="@string/eclipse_image"
                android:src="@drawable/elipse_one" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_frame"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/user_button"
                style="@style/SignInButtonStyle"
                android:background="@drawable/button_border_white"
                android:text="@string/user"
                android:textColor="@color/general_green" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/specialist_button"
                style="@style/SignInButtonStyle"
                android:background="@drawable/button_border_green"
                android:text="@string/specialist"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_auth"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_edit_text"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/professional_edit_text"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/profession">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/health_number_id"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/id_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/work_institute_edit"
                style="@style/SignInEditTextStyle"
                android:layout_width="251dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/work_institute">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_auth"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="55dp"
            android:text="@string/forgot_password"
            android:textColor="@color/general_green"
            android:textSize="12sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_button"
            style="@style/LoginButtonStyle"
            android:background="@drawable/green_rounded_border"
            android:text="@string/sign_in" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_a_user"
                android:textColor="@color/general_green"
                android:textSize="12sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_white"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>